added style, cleaned